--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ionic/react": "^7.8.3",
     "@reduxjs/toolkit": "^2.2.1",
+    "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
