--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-indicators": "^0.2.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "swiper": "^11.0.5"
