--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,19 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-indicators": "^0.2.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
+    "redux-thunk": "^3.1.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -33,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.3",
     "vite": "^5.0.8"
   }
 }
